--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,6 +7,9 @@
 <ion-header>
 
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Log in to your Catalearn Dashboard</ion-title>
   </ion-navbar>
 
@@ -22,13 +25,13 @@
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="contact"></ion-icon> Username</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" [(ngModel)]="login.username" ></ion-input>
           </ion-item>
 
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="key"></ion-icon> Password</ion-label>
-            <ion-input type="password"></ion-input>
+            <ion-input type="password" [(ngModel)]="login.password"></ion-input>
           </ion-item>
 
         </ion-list>
@@ -36,14 +39,14 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <button ion-button icon-left large block >
+        <button ion-button icon-left large block color="catalearn_secondary" >
           <ion-icon name="log-in"></ion-icon>
            Log-in
         </button>
       </ion-col>
 
       <ion-col>
-        <button ion-button icon-left large block color='secondary'>
+        <button ion-button icon-left large block color="main" (click)="signUp()">
           <ion-icon name="add-circle"></ion-icon>
            Sign up
         </button>
