added UserProvider but test failed due to cross origin policy

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -39,7 +39,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <button ion-button icon-left large block color="catalearn_secondary" >
+        <button ion-button icon-left large block color="catalearn_secondary" (click)="logIn()" >
           <ion-icon name="log-in"></ion-icon>
            Log-in
         </button>
