--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,20 +1,18 @@
 <!--
-  Generated template for the UserPage page.
+  Generated template for the ProfilePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
+
   <ion-navbar>
-    
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>User</ion-title>
+    <ion-title>profile</ion-title>
   </ion-navbar>
+
 </ion-header>
 
 
 <ion-content padding>
-  <p> {{isAuthenticated}}</p>  
+
 </ion-content>
