--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,13 +26,13 @@
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="contact"></ion-icon> Username</ion-label>
-            <ion-input type="text" [(ngModel)]="login.username" required ></ion-input>
+            <ion-input type="text" [(ngModel)]="login.username" required name="username" ></ion-input>
           </ion-item>
 
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="key"></ion-icon> Password</ion-label>
-            <ion-input type="password" [(ngModel)]="login.password" required></ion-input>
+            <ion-input type="password" [(ngModel)]="login.password" required name="password"></ion-input>
           </ion-item>
 
         </ion-list>
