signup page now working

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -25,19 +25,19 @@
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="contact"></ion-icon> Username</ion-label>
-            <ion-input type="text" [(ngModel)]="signup.username" ></ion-input>
+            <ion-input type="text" [(ngModel)]="userInput.username" ></ion-input>
           </ion-item>
 
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="key"></ion-icon> Password</ion-label>
-            <ion-input type="password" [(ngModel)]="signup.password"></ion-input>
+            <ion-input type="password" [(ngModel)]="userInput.password"></ion-input>
           </ion-item>
 
           <ion-item class="login-input">
             <ion-label floating>
               <ion-icon name="mail"></ion-icon> Email Address</ion-label>
-            <ion-input type="email" [(ngModel)]="signup.email"></ion-input>
+            <ion-input type="email" [(ngModel)]="userInput.email"></ion-input>
           </ion-item>
 
         </ion-list>
