fixed dashboard problem and added authorised key

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -32,10 +32,10 @@
       <ion-col col-12 col-md-6>
         <ion-card>
           <ion-card-header>
-            Your Catalearn Credits
+            Your GPU Access Key
           </ion-card-header>
           <ion-card-content >
-            <span class="user-credit"> {{userCredit}} </span> Minutes
+            <p> {{authorisedHash}} </p> 
           </ion-card-content>
         </ion-card>
       </ion-col>
