displays selectable hash after login

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -35,7 +35,7 @@
             Your GPU Access Key
           </ion-card-header>
           <ion-card-content>
-            <p> {{authorisedHash}} </p>
+            <p class='selectable'> {{authorisedHash}} </p>
           </ion-card-content>
         </ion-card>
       </ion-col>
