--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -11,6 +11,11 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Catalearn Dashboard</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="refresh()" >
+          <ion-icon name="refresh"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
