--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,12 +7,40 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>profile</ion-title>
+    <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    <ion-title>Welcome {{username}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-header>
+            Your username
+          </ion-card-header>
+          <ion-card-content>
+            {{this.username}}
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-header>
+            Your email address
+          </ion-card-header>
+          <ion-card-content>
+            {{this.email}}
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
